--- a/index.html
+++ b/index.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garviè | Loja oficial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/globals.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a class="logo" href="/">Menu</a>
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+    <div class="navbar">
+        <div class="header-inner-content">
+            <h1 id="logo">Garviè</h1>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Produtos</li>
+                    <li>Sobre a Garviè</li>
+                    <li>Contato</li>
+                </ul>
+            </nav>
+            <div class="nav-icon-container">
+                <img src="images/cart.png" alt="sacola">
+                <img src="images/menu.png" alt="menu" class="menu-button">
             </div>
-            <ul class="nav-list">
-                <li>FEMININO</li>
-                <li>MASCULINO</li>
-                <li>SOBRE A GARVIÈ</li>
-            </ul>
-        </nav>
+        </div>
+    </div>
+
+    <header>
+        <div class="header-inner-content"></div>
+        <div class="header-button-side">
+            <div class="header-button-side-left">
+                <h2>Um novo estilo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque obcaecati eum sequi id ex exercitationem ab fugiat et, tempore temporibus non, asperiores aut corrupti fugit! Est recusandae in suscipit dignissimos!</p>
+                <button>Ver agora</button>
+            </div>
+            <div class="header-button-side-right">
+                <img src="images/nike-dunk.jpg" alt="tenis">
+            </div>
+        </div>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
 </body>
-</html>
