--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garviè | Loja oficial</title>
+    <link rel="shortcut icon" href="images/logo/favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/globals.css">
 </head>
 <body>
     <div class="navbar">
         <div class="header-inner-content">
-            <h1 id="logo">Garviè</h1>
+            <img src="images/logo/logo-garvie-v2.png" alt="logo" id="logo">
             <nav>
                 <ul>
                     <li>Home</li>
@@ -38,4 +39,13 @@
             </div>
         </div>
     </header>
+
+    <script>
+        const navbar = document.querySelector(".navbar");
+        const menubutton = document.querySelector(".menu-button");
+
+        menubutton.addEventListener("click", () =>{
+            navbar.classList.toggle("show-menu");
+        });
+    </script>
 </body>
