--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +22,13 @@
         </ul>
       </nav>
       <div class="navbar-cart">
-        <img src="https://github.com/elias-vieira-jr/Projeto-Garvie/blob/main/images/cart.png?raw=true" alt="sacola">
+        <img src="images/cart.png" alt="sacola">
       </div>
       <div id="burguer" class="navbar-menu" onclick="clickmenu()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-
     </div>
   </header>
   <main></main>
